2002-12-17  Bruno Haible  <bruno@clisp.org>

	* canon-host.c (strdup): Remove unused declaration.

	* fsusage.c: Include full_read.h.
	(get_fs_usage): Use full_read instead of safe_read.

	* utime.c (utime_null): Use SAFE_READ_ERROR.

2002-12-11  Bruno Haible  <bruno@clisp.org>

	* setenv.h: Rewritten to cope with systems that have setenv() but not
	unsetenv().
	* setenv.c, unsetenv.c: Taken from glibc-2.2.4 with the following
	modifications:

	2002-12-11  Bruno Haible  <bruno@clisp.org>

		* setenv.c (alloca): Fall back to malloc.
		(freea): New macro.
		(setenv): Use freea() to free memory allocated with alloca().

	2002-11-13  Bruno Haible  <bruno@clisp.org>

		* setenv.c (compar_fn_t, __add_to_environ, setenv): Use ANSI C
		function declarations.
		* unsetenv.c (unsetenv): Likewise.

	2002-03-04  Bruno Haible  <bruno@clisp.org>

		Portability to AIX 4.3.3.
		* unsetenv.c: New file, extracted from setenv.c.
		* setenv.c: Move the unsetenv() function to unsetenv.c.

	2001-12-20  Bruno Haible  <bruno@clisp.org>

		* setenv.c (__add_to_environ): Don't call realloc(NULL,...),
		use malloc instead. For SunOS4.

	2001-12-11  Bruno Haible  <bruno@clisp.org>

		* setenv.c: Declare alloca.
		(compar_fn_t): New typedef.
		(KNOWN_VALUE, STORE_VALUE): Use it.

	* Makefile.am (libfetish_a_SOURCES): Add setenv.c, unsetenv.c,
	setenv.h.

2002-12-10  Paul Eggert  <eggert@twinsun.com>

	Port exclude.c and exclude.h to more non-GNU systems, e.g. Solaris 7.
	* exclude.h (EXCLUDE_ANCHORED, EXCLUDE_INCLUDE, EXCLUDE_WILDCARDS):
	Choose values that are less likely to collide with system fnmatch
	options.
	* exclude.c (FNM_CASEFOLD, FNM_LEADING_DIR): Define to 0 if not
	defined (e.g., a pure POSIX system).
	(EXCLUDE_macros_do_not_collide_with_FNM_macros): Use FNM_PATHNAME
	instead of FNM_FILE_NAME, for compatibility with pure POSIX sytems.

2002-12-06  Jim Meyering  <jim@meyering.net>

	* error.c: Be consistent: change `#ifndef _LIBC' to `#if !_LIBC'.
